# autonomous-ai-career-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .secrets.baseline  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.dev  LICENSE  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker.env  production.env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/nginx/: Dockerfile  edge-nginx.conf  edge-tls.conf.example  edge.conf  frontend.conf  nginx.conf
docs/: README.md
docs/adr/: 0000-project-philosophy.md  0001-agent-oriented-architecture.md  0002-search-provider-abstraction.md  0003-truthfulness-gate.md  0004-plugin-architecture.md  0005-event-bus.md  0006-json-resume-master-profile.md  0007-planner-agent.md  0008-human-in-the-loop.md  0009-learning-engine.md  0010-hybrid-application-strategy.md  0011-structured-tailored-content.md  0012-opportunity-provenance-and-confidence.md  0013-held-candidate-mechanism.md  0014-cross-source-opportunity-identity.md  0015-web-search-classification.md  0016-truthfulness-gate-verification.md  0017-master-profile-loader.md  0018-submission-safety.md  0019-ats-kind-resolution-and-tier-fallback.md  0020-browser-tier-session-and-pause.md  0021-email-tier-draft-only.md  0022-resume-generator.md  0023-resume-tailoring-pipeline.md  0024-real-confirmation-and-submission-wiring.md  0025-resume-renderer.md  0026-real-apply-command-and-promptfoo-enforcement.md  0027-applicant-identity-snapshot.md  0028-browser-tier-dispatch-and-unsupported-field-refusal.md  0029-per-filler-challenge-and-submit-selectors.md  0030-greenhouse-coverage-is-narrow.md  0031-question-answerer.md  0032-question-answerer-wiring.md  0033-resume-file-generation.md  0034-ats-score-gate.md  0035-real-lever-form-filler.md  0036-worldwide-job-board-sources.md  0037-persistence-discover-and-first-profile-writer.md  0038-decide-layer.md  0039-learn-pillar.md  (+52 more)
docs/deployment/: docker.md  environment.md  monitoring.md  production.md
docs/release/: v1.0.0-notes.md  v1.0.0-rc1-notes.md  v1.1.0-notes.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
promptfoo/: README.md  prompt.txt  promptfooconfig.anthropic.yaml  promptfooconfig.groq.yaml  promptfooconfig.yaml  tests.yaml
research/: __init__.py  decision_benchmarks.py  execution_safety.py  ingestion_promotion.py
scripts/: check_secrets_baseline.py  smoke_test_wheel.py  verify_release_artifacts.py
src/career_agent/: __init__.py  billing.py  cli.py  dashboard.py  invitations.py  organizations.py  scheduler.py
tests/: __init__.py  _fakes.py  conftest.py  test_architecture.py  test_billing.py  test_cli.py  test_cli_apply.py  test_cli_auto.py  test_cli_decision_intelligence.py  test_cli_discover.py  test_cli_local_operator.py  test_cli_notifications.py  test_cli_preferences.py  test_cli_review.py  test_cli_serve.py  test_cli_submit.py  test_cli_verify_promptfoo.py  test_cv_ingest_cli.py  test_discover_preferences_integration.py  test_encoding_portability.py  test_env_example_has_no_real_secrets.py  test_execution_boundary_wiring.py  test_invitations.py  test_notifications_and_dashboard.py  test_organizations.py  test_phase17_gates.py  test_phase28_end_to_end.py  test_phase28_release_invariants.py  test_phase29_provider_release_gate.py  test_phase30_offline_smoke_rehearsal.py  test_phase34_release_audit.py  test_phase35_ci_release_tooling.py  test_phase37_v1_release_promotion.py  test_phase38_post_release_audit.py  test_phase39_onboarding_docs.py  test_phase40_promptfoo_path_portability.py  test_phase41_distribution_hardening.py  test_phase42_onboarding_journeys.py  test_phase44_v1_1_release_promotion.py  test_phase45_post_release_reconciliation.py  (+6 more)
tests/agents/: __init__.py  _profile_fixture.py  test_application_engine.py  test_applicator.py  test_ats_gate_loop.py  test_browser_applicator.py  test_budget.py  test_decide.py  test_discovery_agent.py  test_discovery_hn.py  test_discovery_multisource.py  test_email_applicator.py  test_execution_plan.py  test_file_renderer.py  test_generator_gate_integration.py  test_learning_funnel.py  test_phase27_revision_authority.py  test_planner.py  test_planner_purity.py  test_planning_rules.py  test_provider_selector.py  test_question_answerer.py  test_resume_generator.py  test_resume_materials.py  test_resume_pipeline.py  test_review_engine.py  test_role_expansion.py  test_sensitivity.py  test_submission_engine.py  test_submission_pipeline.py  test_truthfulness_gate.py  test_truthfulness_gate_hardening.py
tests/api/: test_admin_router.py  test_audit_log_router.py  test_auth.py  test_billing_router.py  test_coach_profile_match.py  test_coach_router.py  test_cv_import_router.py  test_dashboard_api.py  test_discover_router.py  test_export_router.py  test_health_endpoints.py  test_master_profile_router.py  test_middleware.py  test_notification_settings_router.py  test_notifications_router.py  test_organizations_router.py  test_password_changed_notification.py  test_prepare_router.py  test_roles_router.py  test_submission_actions_router.py  test_team_router.py  test_user_router.py
tests/core/: __init__.py  test_bus.py  test_config.py  test_events.py  test_interfaces.py  test_logging_config.py  test_ranking.py  test_registry.py  test_request_context.py  test_security.py  test_startup_validation.py
tests/deployment/: test_docker_compose.py  test_nginx_headers.py
tests/domain/: __init__.py  test_application_session.py  test_ats_scoring.py  test_ats_urls.py  test_audit.py  test_billing.py  test_coach_analysis.py  test_cover_letter.py  test_discovery_run.py  test_execution.py  test_identity.py  test_ingestion.py  test_job_preferences.py  test_job_relevance.py  test_journal.py  test_models.py  test_notification.py  test_notification_preferences.py  test_organization.py  test_pareto.py  test_profile_text.py  test_purity.py  (+10 more)
(+409 files in other folders)
