[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "career-agent"
version = "0.1.0"
description = "A single-user, self-hosted Autonomous AI Career Agent: discover, decide, apply, and learn — truthfully."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Autonomous AI Career Agent contributors" }]
keywords = ["job-search", "automation", "agent", "claude", "career"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

# Runtime dependencies. Mirrored (with rationale) in requirements.txt.
dependencies = [
    "anthropic>=0.40",
    "langgraph>=0.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "openpyxl>=3.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "browser-use>=0.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/code-with-vishnu26/autonomous-ai-career-agent"
Repository = "https://github.com/code-with-vishnu26/autonomous-ai-career-agent"

[project.scripts]
career-agent = "career_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/career_agent"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
