[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "career-agent"
version = "1.0.0"
description = "A single-user, self-hosted Autonomous AI Career Agent: discover, decide, ingest, and prepare truthful applications (supervised, prepare-only)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Autonomous AI Career Agent contributors" }]
keywords = ["job-search", "automation", "agent", "claude", "career"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

# Runtime dependencies. Mirrored (with rationale) in requirements.txt.
dependencies = [
    "anthropic>=0.40",
    "langgraph>=0.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "openpyxl>=3.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "browser-use>=0.1",
    "cryptography>=42.0",
    "keyring>=25.0",
    "python-dotenv>=1.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.10",
    "import-linter>=2.0",
    "pre-commit>=3.7",
    "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/code-with-vishnu26/autonomous-ai-career-agent"
Repository = "https://github.com/code-with-vishnu26/autonomous-ai-career-agent"

[project.scripts]
career-agent = "career_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/career_agent"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# Dependency-direction enforcement (import-linter). Dependencies must point
# downward only; domain must depend on nothing else in the project. Enforced
# in the test suite by tests/test_architecture.py, so it fails the build if
# an import goes the wrong way.
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "career_agent"

[[tool.importlinter.contracts]]
name = "Dependencies point downward only"
type = "layers"
layers = [
    "career_agent.agents | career_agent.plugins",
    "career_agent.core",
    "career_agent.domain",
]

[[tool.importlinter.contracts]]
name = "Domain depends on nothing else in the project"
type = "forbidden"
source_modules = ["career_agent.domain"]
forbidden_modules = [
    "career_agent.core",
    "career_agent.agents",
    "career_agent.plugins",
    "career_agent.llm",
    "career_agent.storage",
    "career_agent.integrations",
]

[[tool.importlinter.contracts]]
name = "Plugins never import core.config directly (config flows inward via injection)"
type = "forbidden"
source_modules = ["career_agent.plugins"]
forbidden_modules = ["career_agent.core.config"]

[[tool.importlinter.contracts]]
name = "Orchestration never imports a concrete ClaimVerifier directly (ADR-0018, ADR-0043)"
type = "forbidden"
source_modules = [
    "career_agent.agents",
    "career_agent.core",
    "career_agent.plugins",
    "career_agent.storage",
]
forbidden_modules = [
    "career_agent.llm.claim_verifier",
    "career_agent.llm.groq_claim_verifier",
]
